Found and fixed a bug related to query generation. Adjusted permgen size in pom.