@@ -569,6 +569,7 @@
 	    <!-- jvmArg>-Xnoagent</jvmArg -->
 	    <!-- jvmArg>-Djava.compiler=NONE</jvmArg -->
 	    <jvmArg>-Xmx4096m</jvmArg>
+	    <jvmArg>-XX:MaxPermSize=512m</jvmArg>
 	    <jvmArg>-Djava.library.path=$HGDB_ROOT/native</jvmArg>
             <jvmArg>-DpackageLinkDefs=file://${project.build.directory}/packageLinkDefs.properties</jvmArg>
           </jvmArgs>
